added CSS stylesheet

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -6,8 +6,8 @@
     <title>Flest Fridager - Kalender</title>
     <style>
         table { border-collapse: collapse; width: 100%; }
-        th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-        .off { background-color: #c8e6c9; }  /* highlight off days */
+        th, td { border: 1px solid lightgray; padding: 8px; text-align: center; }
+        .off { background-color: darkseagreen; }  /* highlight off days */
     </style>
 </head>
 <body>
@@ -24,7 +24,7 @@
         </label><br>
         <label>
             PTO-dager for inneklemming:
-            <input type="number" name="pto_budget" value="21" min="0">
+            <input type="number" name="pto_budget" value="25" min="0">
         </label><br>
         <button type="submit">Bygg kalender</button>
     </form>
